--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "chai": "^4.1.2",
     "cz-conventional-changelog": "^2.1.0",
     "mocha": "^4.0.1",
-    "webpack": "^3.9.1"
+    "webpack": "^3.9.1",
+    "sass": "^1.70.0",
   },
   "config": {
     "commitizen": {
